[metadata]
name = python-edlinkn8
version = 0.0.1
description = Everdrive N8 Python Utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zohassadar/python-edlinkn8
author = Richard
author_email = zohassadar@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = edlinkn8
python_requires = >=3.10

[options.entry_points]
console_scripts =
    edlinkn8=edlinkn8:main
